[tool.poetry]
name = "dials-py"
version = "0.1.0"
description = "The Python api client interface to DIALS service"
authors = ["Gabriel Moreira <gabrielmscampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
