[tool.poetry]
name = "cmsdials"
version = "0.2.2"
description = "The Python api client interface to DIALS service"
authors = ["Gabriel Moreira <gabrielmscampos@gmail.com>"]
readme = "README.md"
include = ["LICENSE"]
repository = "https://github.com/cms-DQM/dials-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "cmsdials" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "<2, >=1"
typing-extensions = "<4.6.0, >=3.6.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
